[package]
name = "merasmus"
version = "0.1.0"
edition = "2018"

[dependencies]
serenity = { version = "0.10.9", features = ["unstable_discord_api"] }

serde = "1.0.130"
serde_derive = "1.0.130"
toml = "0.5.8"

tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread", "time"] }

bytes = "1.1.0"
