[package]
name = "merasmus"
version = "0.1.1"
authors = ["Nicholas McDaniel", "Alexander Hill"]
edition = "2018"
license = "MIT"

[dependencies]
serde = "^1.0.130"
serde_derive = "^1.0.130"
toml = "^0.5.8"

[dependencies.a2s]
features = ["async"]
version = "^0.2.3"

[dependencies.serenity]
features = ["unstable_discord_api"]
version = "^0.10.9"

[dependencies.tokio]
features = ["macros", "rt-multi-thread", "time"]
version = "^1.11.0"